# RTK_GPS_NTRIP

ntrip_client/scripts/: ntrip_ros.py
rtk_gps_ntrip/: CMakeLists.txt  package.xml
rtk_gps_ntrip/launch/: rtk_gps_ntrip_launch.py
ublox_gps/config/: vilma02_gnss_params.yaml
ublox_gps/launch/: ublox_gps_node-launch.py
